# Copyright 2018 the Deno authors. All rights reserved. MIT license.
import("//build_extra/rust/rust.gni")

rust_crate("url") {
  source_root = "$rust_reg_github/url-1.7.1/src/lib.rs"
  extern = [
    ":matches",
    ":idna",
    ":percent_encoding",
  ]
}

rust_crate("percent_encoding") {
  source_root = "$rust_reg_github/percent-encoding-1.0.1/lib.rs"
  args = [
    # TODO: Suppress some warnings at this moment
    # This should be removed when it's fixed in servo/rust-url repository
    # https://github.com/servo/rust-url/issues/455
    "-Aunused-imports",
    "-Adeprecated",
  ]
}

rust_crate("matches") {
  source_root = "$rust_reg_github/matches-0.1.7/lib.rs"
}

rust_crate("idna") {
  source_root = "$rust_reg_github/idna-0.1.5/src/lib.rs"
  extern = [
    ":matches",
    ":unicode_bidi",
    ":unicode_normalization",
  ]
}

rust_crate("unicode_bidi") {
  source_root = "$rust_reg_github/unicode-bidi-0.3.4/src/lib.rs"
  extern = [ ":matches" ]
}

rust_crate("unicode_normalization") {
  source_root = "$rust_reg_github/unicode-normalization-0.1.7/src/lib.rs"
}

